# Sunray

./: .gitignore  README.en.md  README.md  build.sh  build_TV.sh  build_control.sh  build_ego.sh  build_sim.sh  build_viobot.sh  install_dependencies.sh  test_udp.sh
Comunication_Module/: CMakeLists.txt  package.xml
Comunication_Module/include/: SunrayServer.h
Comunication_Module/include/Communication/: Cell.h  Codec.cpp  CommunicationTCPSocket.h  CommunicationUDPSocket.cpp  CommunicationUDPSocket.h  TCPServer.cpp
Comunication_Module/scripts/: server.py
Comunication_Module/src/: ground_control.cpp  recv_test.cpp  send_test.cpp
Comunication_Module/sunray_communication_bridge/: CMakeLists.txt  package.xml
Comunication_Module/sunray_communication_bridge/include/: communication_bridge.h
Comunication_Module/sunray_communication_bridge/launch/: sunray_communication_bridge.launch  sunray_communication_bridge_sim.launch
Comunication_Module/sunray_communication_bridge/src/: communication_bridge.cpp  communication_bridge_node.cpp
Comunication_Module/sunray_ground/: CMakeLists.txt
Comunication_Module/sunray_ground/include/: ground_msg.h
Comunication_Module/sunray_ground/launch/: ground_control.launch
Comunication_Module/sunray_ground/scripts/: ui.py
Comunication_Module/sunray_ground/src/: ground_control.cpp
General_Module/mavlink/: CMakeLists.txt  package.xml
General_Module/mavlink/include/: autopilot_interface.h  data_convert.hpp  mavlink_control.h
General_Module/mavlink/launch/: mavlink.launch  sunray_mavros_exp.launch
General_Module/mavlink/src/: autopilot_interface.cpp  mav_link_node.cpp  mavlink_control.cpp  serial_port.cpp
General_Module/sunray_TV/: CMakeLists.txt  package.xml
General_Module/sunray_TV/launch/: auto_waypoint.launch  depth_avoid.launch  sunray_ego_exp.launch  sunray_ego_exp_ugv.launch  sunray_ego_sim.launch  sunray_ego_sim_ugv.launch  waypoint.yml
General_Module/sunray_TV/src/: auto_waypoint.cpp  depth.cpp  depth_avoid.cpp  viobot.cpp
General_Module/sunray_common/sunray_msgs/: CMakeLists.txt
General_Module/sunray_gimbal/: CMakeLists.txt  package.xml  siyi_message.py  siyi_sdk.py
General_Module/sunray_gimbal/demo/: demo_gimbal_angle_photo.sh  demo_gimbal_qrtracker.sh  demo_gimbal_scan.sh  demo_image_saver.sh  gimbal_angle_photo.cpp  gimbal_capture_switch.cpp  gimbal_qrtracker.cpp  gimbal_target_lock.cpp  image_saver.cpp
General_Module/sunray_gimbal/launch/: gimbal_control.launch  gimbal_qrtracker.launch  rtsp_push.launch
General_Module/sunray_gimbal/msg/: GimbalParams.msg
General_Module/sunray_gimbal/scripts/: decompress_bridge.py  gimbal_control.py
General_Module/sunray_gimbal/scripts_exp/: demo_gimbal_angle_photo.sh  demo_gimbal_capture_switch.sh  demo_gimbal_qrtracker.sh  demo_gimbal_scan.sh  demo_image_saver.sh
General_Module/sunray_gimbal/src/: gimbal_capture_switch.cpp  gimbal_qrtracker.cpp  gimbal_scan_keyboard.cpp  image_saver.cpp
General_Module/sunray_gimbal/srv/: GimbalReboot.srv  GimbalStatus.srv
General_Module/sunray_gimbal/test/: test_get_rate.py  test_set_angles.py
General_Module/sunray_gimbal/utils/: siyi_message.py  siyi_sdk.py  utils.py
General_Module/sunray_ground/: CMakeLists.txt  package.xml  readme.md
General_Module/sunray_ground/include/: SunrayServer.h  ground_control.h  ground_message.h  ground_msg.h  sunray_connect.hpp  sunray_msg_ground.h
General_Module/sunray_ground/launch/: ground_control.launch
General_Module/sunray_ground/scripts/: message.py
General_Module/sunray_ground/src/: ground_control.cpp  ground_control_node.cpp  recv_test.cpp  send_test.cpp
General_Module/sunray_media/: CMakeLists.txt  package.xml
General_Module/sunray_media/include/: rtsp_push.h
General_Module/sunray_media/launch/: rtsp_push.launch
General_Module/sunray_media/src/: rtsp_push.cpp
General_Module/sunray_planner/Utils/: CMakeLists.txt  package.xml
General_Module/sunray_planner_utils/: CMakeLists.txt  package.xml
General_Module/sunray_planner_utils/config/: advanced_param_exp.xml  advanced_param_sim.xml  sunray_swarm.rviz  waypoint.yml
General_Module/sunray_planner_utils/launch/: exploration_mid360.launch  goal2swarm.launch  livox2point.launch  point_cloud_transform.launch  point_cloud_transform_swarm.launch  (+13 more)
General_Module/sunray_tutorial/: CMakeLists.txt  package.xml  readme.md
General_Module/sunray_uav_control/: CMakeLists.txt  package.xml  readme.md
General_Module/sunray_ugv_control/: CMakeLists.txt  package.xml
General_Module/sunray_ugv_planning/: CMakeLists.txt  package.xml
General_Module/sunray_wheeltec_robot/: CMakeLists.txt  README.md  package.xml  start.sh
RVO2/: CMakeLists.txt  package.xml
RVO2/include/: changing_formation.h
RVO2/src/: changing_formation.cpp  changing_formation_node.cpp
Simulation/sunray_simulator/: CMakeLists.txt  README.md  package.xml  readme.md
orca_planenr/: CMakeLists.txt  package.xml
orca_planenr/include/: orca_planner.h
orca_planenr/launch/: orca.launch
orca_planenr/scripts/: goal_publisher.py
orca_planenr/src/: orca_planner.cpp  orca_test_node.cpp
sunray_comm/: CMakeLists.txt  README.md  package.xml
sunray_comm/include/: enum_utils.h  generic_port.h  get_mode.h  math_utils.h  mavlink_receiver.h  mavlink_sender.h  msg_status.h  px4_custom_mode.h
sunray_comm/launch/: mavros_fmt.launch  mavros_px4.launch  params.yaml  params_px4.yaml  params_viobot.yaml  sunray_comm_fmt.launch  sunray_comm_fmt_viobot.launch  sunray_comm_px4.launch  test_send.launch
sunray_comm/src/: fake_topic_pub.cpp  fake_topic_pub_timer.cpp  mavlink_node.cpp
sunray_formation/formation_control/: CMakeLists.txt  package.xml
sunray_formation/sunray_orca/: CMakeLists.txt  package.xml
sunray_formation/uav_formation/: CMakeLists.txt  package.xml
sunray_viobot/: CMakeLists.txt  README.md  package.xml
sunray_viobot/include/: sunray_viobot.h
sunray_viobot/launch/: octomap.launch  sunray_viobot.launch  sunray_viobot_rviz.launch  viobot.rviz
sunray_viobot/lib/: sunray_viobot.cpp
sunray_viobot/src/: sunray_viobot_node.cpp  viobot_demo.cpp
(+1171 files in other folders)
