<?xml version="1.0"?>
<package format="2">
  <name>sunray_planner_utils</name>
  <version>0.0.0</version>
  <description>The sunray_planner_utils package</description>

  <maintainer email="sirui@yundrone.com">YunDrone Tech</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl_ros</build_depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>laser_geometry</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
