<?xml version="1.0"?>
<package format="2">
  <name>sunray_uav_control</name>
  <version>0.0.0</version>
  <description>The sunray_uav_control package</description>

  <maintainer email="sunray2023@126.com">Yundrone Tech</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
